--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,15 +3,14 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from a few orientations and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
+%Keine Doppelpiunkte
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed \cite{classen2017}: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  
+IDI could, in theory, allow nanoscale resolution in three dimensions from few orientations and drastically increase the range of ultrashort X-ray FEL pulses applications. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
 
-In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, pulse duration, focal spot size, sample thickness, precise alignment of the detector, identification and correction of misalignment, and handling of detector artifacts in the analysis are identified as relevant parameters for experimental success. A photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented.
+In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, various parameters of the setup are identified as being crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size, and sample thickness. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignments, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
 
-These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
-Spherical iron nanoparticles deposited in polymer matrices were chosen as a nanometer-scaled and characterized using electron microscopy and small-angle scattering, showing undesirable aggregation of the particles and reduction of the visibility of the structure factor. Thin gallium arsenide single crystal films were used to try to capture the Bragg peaks in the reconstruction. 
-The results of the previously reported imaging of the focus could be reproduced by using iron and copper foils as a sample, measuring the focal width in the horizontal direction as (240$\pm$20)\,nm while estimating from the observed low contrast the number of modes overlaid in the measurement as >200. Analysis of Kossel lines reduced the misalignment not corrected in the crystal data analysis to $\pm$0.2°. However, neither about the nanoparticle samples nor the single crystals, any features in the structure factor could be recovered.
-
-Even though the goal of increasing the resolution could not be achieved, this work may provide a basis for upcoming experiments.
+Here, the results of the previously reported imaging of the focus were reproduced by using iron and copper foils as a sample. The focal width in the vertical direction achieved by the \textit{100\,exa} nano-focusing system was determined by IDI  as (240$\pm$20)\,nm. From the low contrast observed, the number of independent modes overlaid in the measurement was estimated as >200.  As nanometer-scaled samples, spherical iron nanoparticles deposited in polymer matrices were used. The characterization of the prepared nanoparticle samples by small-angle scattering showed undesirable aggregation and reduced visibility of the structure factor.  From the recorded fluorescence speckle patterns, no features of the structure factor were recovered by the correlation analysis.  Additionally, the fluorescence patterns of thin gallium arsenide single crystal films were recorded.  An Analysis of the visible Kossel lines reduced the misalignment not corrected for to $\pm$0.2°. However, no Bragg peaks could be identified in the IDI reconstruction.
+Even though the goal of providing a proof of principle experiment for nanoscale resolution could not be achieved, this work may provide a basis for upcoming experiments.
 
 
 
@@ -27,6 +26,8 @@ Even though the goal of increasing the resolution could not be achieved, this wo
 Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, verspricht mittels der in der  astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen  hochaufgelöste Strukturinformationen aus Röntgenfluoreszens zu extrahieren \cite{classen2017}.  
 In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wurde jedoch nur  die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
 
-In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen und dreidimensionaler Messung von Einkristallen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln. In der Auswertung der in diesem Experiment aufgenommenen Daten müssen Störeinflüsse minimiert und experimentelle Limitationen ausgeglichen werden. Dies erfolgt u.a. durch die für IDI erstmalige Anwendung von Kossellinien basierter Orientierungsbestimmung. 
-Es gelang, die Abbildung des Fokus erfolgreich zu reproduzieren.  Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichtet zu planen.
+In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen und dreidimensionaler Messung von Einkristallen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln.
+In diesem wurden K$_\alpha$-Fluoreszenz Specklemuster von Metallfolien, Galliumarsenid Einkristallfolien und in Polymeren eingebetteten Eisennanopartikeln unter Anregung mit 10\,fs Röntgenpulsen vermessen. Aus den Daten der Metallfolien gelang es, die Abbildung des Fokus erfolgreich zu reproduzieren und die vertikale Größe des \textit{100 exa} Nanofokus als
+(240$\pm$20)\,nm zu bestimmen. Mittels Analyse der Kossellinien konnte die Unsicherheit in der Orientierung der Einkristalle auf $\pm$0.2° reduziert werden. In den Rekonstruktionen des Strukturfaktors der Kristalle wurden keine Bragg Peaks identifiziert. Die hergestellen Nanopartikel Proben zeigten in Messung der Kleinwinkelstreuung am SSRL Synchrotron nur schwach ausgeprägte charakteristische Merkmale, diese konnten in der IDI Messung nicht rekonstruiert werden.
+Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichter zu planen.
 \end{otherlanguage}
