--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -4,18 +4,18 @@ As the main principle of IDI is using intensity correlations of X-ray fluorescen
 
 
 \section{X-Ray Fluorescence}
-X-ray fluorescence is emitted if atoms are ionised leaving vacancies in the inner shells, which are subsequently filled by electrons of higher energy levels while the energy difference is emitted as photons  (see \fref{fig:levels} for the usual naming convention), compared to the non-radiating Auger decay which, for K-shell vacancies, is more likely for lighter atoms (up to atomic number ~30) \cite{santra2009}.  The finite lifetime of the excited states cause a predominantly Lorentzian line shape \cite{attwood1999,van2001}. In the experimental section, iron, copper and gallium atoms are considered - the relevant emission energies, the experimental line widths and relative intensities are shown in \fref{tab:elements}.   Roughly, the $K_\alpha$ line widths correspond to coherence times in the 0.4-0.8\,fs range \cite{krause1979}. The cross section for $K$-fluorescence is the highest just above the $K$-absorption edge and, for example for iron, an order of magnitude higher than the coherent cross section (see \fref{fig:cross}).
+X-ray fluorescence is emitted if atoms are ionised leaving vacancies in the inner shells, which are subsequently filled by electrons of higher energy levels while the energy difference is emitted as photons, compared to the non-radiating Auger decay which, for K-shell vacancies, is more likely for lighter atoms up to atomic number ~30 \cite{santra2009}.  The finite lifetime of the excited states cause a predominantly Lorentzian line shape \cite{van2001}. In the experimental section, iron, copper and gallium atoms are considered -- the relevant emission energies, the experimental line widths and relative intensities compared to the most intense $K_{\alpha,1}$ line are shown in \fref{tab:elements} with the usual naming convention illustrated in \fref{fig:levels}.   Roughly, the $K_{\alpha,1}$ line widths correspond to coherence times in the 0.4-0.8\,fs range \cite{krause1979}. The cross section for $K$-fluorescence is the highest just above the $K$-absorption edge and, for example for iron, an order of magnitude higher than the coherent cross section (see \fref{fig:cross}).
 
 \begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.35\textwidth}
 		\includegraphics[width=\linewidth]{images/levels.pdf}
-		\caption[Atomic Levels]{Atomic levels and associated X\nobreakdash-ray energies}
+		\caption[Atomic Levels]{Atomic levels and associated X\nobreakdash-ray energies.}
 		\label{fig:levels}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.45\textwidth}
 		\includegraphics[width=\linewidth]{images/crosssectionFe.pdf}
-		\caption[Cross Sections]{X-ray Cross Sections for Iron. Data from xraylib \cite{xraylib}}
+		\caption[Cross Sections]{X-ray Cross Sections for Iron. Data from xraylib \cite{xraylib}.}
 		\label{fig:cross}
 	\end{subfigure}
 \end{figure}
@@ -38,16 +38,16 @@ X-ray fluorescence is emitted if atoms are ionised leaving vacancies in the inne
 \section{Basic Concepts of Coherence}
 In the following, for simplicity, all considered fields are initially assumed to be both stationary and ergodic: A process $f(t)$ is wide-sense stationary, if the expectation value $E[f(t)]$ is independent of the time $t$ and $E[f(t_1)f(t_2)]$ depends only on the time difference $\tau=f_1-f_2$. A process, for which the time average and the ensemble average are equal is called ergodic. Stationarity is a necessity for ergodicity \cite{goodman2000}. It can be shown, that the basic principles hold for non-ergodic fields with the main difference being, that all expectation values have to be taken over different realizations  \cite{lajunen04}.
 
-Spherical waves as solutions wave equation in spherical coordinates,
+Spherical waves as solutions of the wave equation in spherical coordinates,
 \begin{equation}
-	\vec{E}(\vec{r},t)=\vec{E}_0(k,t) \frac{e^{i\vec{r}\vec{k}-iwt}}{R}
+	\vec{E}(\vec{r},t)=\vec{E}_0(k,t) \frac{e^{i\vec{r}\vec{k}-iwt}}{\left|\vec{r}\right|} \,,
 \end{equation}
-describe the electric field of light propagating isotropically in vacuum. 
+with wave vector $\vec{k}$ and angular frequency $\omega$ describe the electric field of light propagating isotropically in vacuum. 
 The superposition principle allows the addition of two waves (with the real amplitudes $\vec{A}_{1,2}$ and phases $\phi_{1,2}$)
 \begin{equation}
-\vec{E}(\vec{r},t)=\vec{E_1}(\vec{r},t)+\vec{E_2}(\vec{r},t)=\vec{A_1}*e^{i\phi_1} * e^{i\vec{r}\vec{k_1}-iw_1t} + \vec{A_1}*e^{i\phi_1} * e^{i\vec{r}\vec{k_2}-iw_2t} 
+\vec{E}(\vec{r},t)=\vec{E_1}(\vec{r},t)+\vec{E_2}(\vec{r},t)=\vec{A_1}e^{i\phi_1}  e^{i\vec{r}\vec{k_1}-iw_1t} + \vec{A_1}e^{i\phi_1}  e^{i\vec{r}\vec{k_2}-iw_2t} 
 \end{equation} 
-The measured intensity with measurement time $T$ will be
+The intensity measured at a point $\vec{r}$ with a measurement time $T$ will be
 \begin{equation}
 	I(\vec{r},t)\propto \frac{1}{T} \int_0^T \left|E(\vec{r},t)\right|^2 \diff t
 	\stackrel{T\gg1/w}{\propto}
@@ -56,13 +56,13 @@ The measured intensity with measurement time $T$ will be
 The superposition of two monochromatic, stationary waves with a fixed phase difference $\Delta \phi$, such as a wave and its time delayed copy (\fref{fig:michelson}) in an interferometer, gives rise to interference fringes
 \begin{align*}
 	\left<I(\vec{r},t)\right> & = I_1+I_2+2\left<\Re({E_1(\vec{r},t)}E_2^*(\vec{r},t))\right> \\
-	& = I_1+I_2+2\sqrt{I_1I_2}\cos\left((\vec{k_1}-\vec{k_2})\vec{r}+\Delta \phi\right) 
+	& = I_1+I_2+2\sqrt{I_1I_2}\cos\left((\vec{k_1}-\vec{k_2})\vec{r}+\Delta \phi\right)  \,.
 	\numberthis
 \label{eq:interference}
 \end{align*}
 
 Defining the contrast of the fringes as the visibility $V=\frac{I_{max}-I_{min}}{I_{max}+I_{min}}$,
-results for equal intensities of the the waves in maximum contrast,  $V=\frac{2\sqrt{I*I}}{I+I}I=1$. This case of a fixed phase difference is called \textit{coherent}.
+results for equal intensities of the the waves in maximum contrast,  $V=\frac{2\sqrt{I*I}}{I+I}I=1$. In this case of a fixed phase difference, the waves are called \textit{coherent}.
 If, on the other hand, the phase difference $\Delta \phi$ is not fixed but completely random and therefore averages out in \fref{eq:interference}, the visibility goes to 0 and the waves are regarded as \textit{incoherent}  \cite{born1980,goodman2000}.
 
 To consider non monochromatic waves, we define the self coherence function $\Gamma$ as 
@@ -71,15 +71,15 @@ To consider non monochromatic waves, we define the self coherence function $\Gam
 \end{equation}
 and its normalized version, the complex degree of (self-)coherence $\gamma$, as
 \begin{equation}
-\gamma(\tau)=\frac{\Gamma(\tau)}{\Gamma(0)} =  \frac{\Gamma(\tau)}{<I>} \,.
+\gamma(\tau)=\frac{\Gamma(\tau)}{\Gamma(0)} =  \frac{\Gamma(\tau)}{\left<I(t)\right>} \,.
 \end{equation} 
-Now \fref{eq:interference} can be written as $I=I_{1}+I_{2}+2 \sqrt{I_{1} I_{2}} \operatorname{Re}\left[\gamma(\tau)\right]$ and (again for equal intensities) the visibility is $V(\tau)=\left|\gamma(\tau)\right|$ \cite{zernike1938,loudon2000}. As the Wiener Khinchin theorem connects the power spectrum $F(w)$ with $\gamma$,
+Now \fref{eq:interference} can be written as $I=I_{1}+I_{2}+2 \sqrt{I_{1} I_{2}} \operatorname{Re}\left[\gamma(\tau)\right]$ and (again for equal intensities) the visibility is $V(\tau)=\left|\gamma(\tau)\right|$ \cite{zernike1938,loudon2000}. As the Wiener-Khinchin theorem connects the power spectrum $F(w)$ with $\gamma$,
 \begin{equation}
 	F(\omega)=\frac{1}{2 \pi} \int_{-\infty}^{\infty} \gamma(\tau) \exp (\mathrm{i} \omega \tau)  \dif \tau \,,
 \end{equation}
-the visibility is a function of the fourier transformed spectrum \cite{lajunen04}.
+the visibility is a function of the fourier-transformed spectrum \cite{lajunen04}.
 
-The \textit{coherence time }shall describe at which delay the visibility falls to approximately zero. One possible definition by Mandel based on the complex degree of coherence,
+The \textit{coherence time }shall describe at which delay the visibility falls to approximately zero. One possible definition of the coherence time by Mandel based on the complex degree of coherence,
 \begin{equation}
 \tau_c = \int_{-\infty}^{\infty} \left| \gamma(\tau)\right|^2 \diff \tau 
 \end{equation} will be used in the following. Other definitions commonly used are equivalent up to a constant factor and lead generally to coherence times of the same order of magnitude \cite{mandel1959,goodman2000}. As a relevant example for inner shell fluorescence, for an exponentially decaying electric field envelope\footnote{Corresponding to an intensity/photon number decay with time constant $\sfrac{\tau}{2}$} $E(t)=\Theta(t)e^{-t/\tau_E}$, the power spectrum is Lorentzian with an angular frequency FWHM of $\Delta \omega=\frac{2}{\tau_E}$,
@@ -117,7 +117,7 @@ A generalization of the complex degree of self coherence to different fields  $E
 
 
 
-This can be used for example to describe Young's double slit experiment (\fref{fig:doubleslit}): On the screen at point $\vec{r}$, the electrical field is 
+This can be used, for example, to describe Young's double slit experiment (\fref{fig:doubleslit}): On the screen at point $\vec{r}$, the electrical field is 
 \begin{equation}
 	E(\vec{r}, t)=\frac{E\left(\vec{r}_{1}, t-R_{1} / c\right)}{R_{1}} e^{i\left[\vec{k}_{1} \cdot\left(\vec{r}-\vec{r}_{1}\right)-\omega t\right]}+\frac{E\left(\vec{r}_{2}, t-R_{2} / c\right)}{R_{2}} e^{i\left[\vec{k}_{2} \cdot\left(\vec{r}-\vec{r}_{2}\right)-\omega t\right]} \,.
 \end{equation}
@@ -128,7 +128,7 @@ If the distances from $\vec{r}$ to the two slits are (approximately) equal, $R_{
 	& \propto 1+
 	\frac{2 \sqrt{\left< I\left(\vec{r}_{1}, t\right)\right>\left< I\left(\vec{r}_{2}, t\right)\right>}}
 	{\vphantom{2\sqrt{\left<I\left(\vec{r}_{1}\right)\right>}}\left< I\left(\vec{r}_{1}, t\right)\right>+\left< I\left(\vec{r}_{2}, t\right)\right>}	
-	\frac{\vphantom{2\sqrt{\left<I\left(\vec{r}_{1}\right)\right>}}\left< E^{*}\left(\vec{r}_{1}, t\right) E\left(\vec{r}_{2}, t\right)\right>}
+	\frac{\vphantom{2\sqrt{\left<I\left(\vec{r}_{1}\right)\right>}}\left|\left< E^{*}\left(\vec{r}_{1}, t\right) E\left(\vec{r}_{2}, t\right)\right>\right|}
 	{\vphantom{2\sqrt{\left<I\left(\vec{r}_{1}\right)\right>}}\sqrt{\left\langle I\left(\vec{r}_{1}, t\right)\right>\left\langle I\left(\vec{r}_{2}, t\right)\right>}}
 	\cos \left[\left(\vec{k}_{1}-\vec{k}_{2}\right) \cdot \vec{r}+\Delta \phi\right]
 	\numberthis
@@ -148,8 +148,8 @@ and the visibility can be identified as the modulus of $g^1$ \cite{loudon2000,ou
 	\caption{Two photon interference in HBT.}
 	\label{fig:twophoton}
 \end{subfigure}
-\caption[Schematic of a double slit and two photon interference in  HBT experiments]{\textbf{(a)} Monochromatic light goes through slits located at $R_1$ and $R_2$. The intensity at a position $r$ on the screen in distance $d$ is the superposition of both paths.  If the slits are within the lateral coherence area of the source, the visibility of the interference pattern depends on the path length difference in comparison to the coherence time $\tau$.
-In the Hanbury Brown Twiss experiment\textbf{(b)} are two indistinguishable two photon states, illustrated as dashed and  continuous lines respectively: Either simultaneously a photon from emitter 1 is detected by detector A and from emitter 2 by detector B or from emitter 1 by detector B and from emitter 2 by detector A.}
+\caption[Schematic of a double slit and two photon interference in  HBT experiments]{\textbf{(a)} Monochromatic light goes through slits located at $R_1$ and $R_2$. The intensity at a position $r$ on the screen in distance $d$ is the superposition of both paths.  If the slits are within the lateral coherence area of the source, the visibility of the interference pattern depends on the path length difference in comparison to the coherence time $\tau$. \textbf{(b)}
+In the Hanbury Brown Twiss experiment there are two indistinguishable two photon states, illustrated as dashed and  continuous lines respectively: Either simultaneously a photon from emitter 1 is detected by detector A and from emitter 2 by detector B or from emitter 1 by detector B and from emitter 2 by detector A.}
 \end{figure}
 
 
@@ -181,7 +181,7 @@ with the source volume $S$ and intensity distribution $I_s$, total source intens
 \section{Hanbury-Brown Twiss Experiment}
 Hanbury-Brown and Twiss first used the correlation between the intensities captures by photomultiplier tubes to measure the angular size of stars  \cite{hanbury1956}. The underlying effect can be explained based on semi-classical coherence theory for chaotic light sources \cite{baym1997,goodman2000}:
 
-If the sources $A$ and $B$ (in the original experiment different parts of the observed star) produce each spherical electromagnetic waves with random but constant phases $\phi_{A,B}$, such that (ignoring polarization) $E_{A,B}=c_{A,B} e^{i k\left|\vec{r}-\vec{r}_{1,2}\right|+i \phi_{A,B}} /\left|\vec{r}-\vec{r}_{A,B}\right|$, the total intensity $I_{1}$ at detector 1 is
+If two sources $A$ and $B$ (in the original experiment different parts of the observed star) produce each spherical electromagnetic waves with random but constant phases $\phi_{A,B}$, such that (ignoring polarization) $E_{A,B}=c_{A,B} e^{i k\left|\vec{r}-\vec{r}_{1,2}\right|+i \phi_{A,B}} /\left|\vec{r}-\vec{r}_{A,B}\right|$, the total intensity $I_{1}$ at detector 1 is
 \begin{equation}
 	I_{1} =
 	\frac{1}{L^{2}}\left(
@@ -191,35 +191,36 @@ If the sources $A$ and $B$ (in the original experiment different parts of the ob
 	+c_A     c_B^{*} e^{-i\left(k\left(r_{1 b}-r_{1 a}\right)+\phi_{B}-\phi_{A}\right)}
 	\right)
 \end{equation}
-with $r_{1 a}$ the distance from source $A$ to detector 1 etc. and similar at detector 2.
+with $r_{1 a}$ the distance from source $A$ to detector 1 etc., and analogously for detector 2.
 Averaging over many independent realizations of the random phases leads to the average intensities in the two detectors,
 \begin{equation}
-	\left\langle I_{1}\right\rangle=\left\langle I_{2}\right\rangle=\frac{1}{L^{2}}\left(\left\langle|c_A|^{2}\right\rangle+\left\langle|c_B|^{2}\right\rangle\right)
-\end{equation}, 
+	\left\langle I_{1}\right\rangle=\left\langle I_{2}\right\rangle=\frac{1}{L^{2}}\left(\left\langle|c_A|^{2}\right\rangle+\left\langle|c_B|^{2}\right\rangle\right) \,,
+\end{equation}
 
 independent of the separation of the sources. On the other hand, the average of the product of the intensities is
 \begin{equation}
 	\left\langle I_{1} I_{2}\right\rangle =
-	\left\langle I_{1}\right\rangle\left\langle I_{2}\right\rangle+\frac{2}{L^{4}}|c_A|^{2}|c_B|^{2} \cos \left(k\left(r_{1 a}-r_{2 a}-r_{1 b}+r_{2 b}\right)\right) 
-\end{equation}.
+	\left\langle I_{1}\right\rangle\left\langle I_{2}\right\rangle+\frac{2}{L^{4}}|c_A|^{2}|c_B|^{2} \cos \left(k\left(r_{1 a}-r_{2 a}-r_{1 b}+r_{2 b}\right)\right) \,.
+\end{equation}
 Hence,
 \begin{equation}
 	\frac{\left\langle I_{1} I_{2}\right\rangle}{\left\langle I_{1}\right\rangle\left\langle I_{2}\right\rangle}
 	=1+2 \frac{\left\langle|\alpha|^{2}\right\rangle\left\langle|\beta|^{2}\right\rangle}{\left(\left\langle|\alpha|^{2}\right\rangle+\left\langle|\beta|^{2}\right\rangle\right)^{2}} \cos \left(k\left(r_{1 a}-r_{2 a}-r_{1 b}+r_{2 b}\right)\right)
 \end{equation}
 
-For a large enough distance between the sources and detectors $(L \gg R)$, the small angle approximation can be made and
+For a large enough distance between the sources and detectors $(L \gg R)$, the small angle approximation can be used, yielding
 \begin{equation}
-	g^2\left(\vec{k_1}-\vec{k_2}\right)-1\propto \cos{\left(\vec{R} \cdot\left(\vec{k}_{2}-\vec{k}_{1}\right)\right)}
+	g^2\left(\vec{k_1}-\vec{k_2}\right)-1\propto \cos{\left(\vec{R} \cdot\left(\vec{k}_{2}-\vec{k}_{1}\right)\right)} \,,
 \end{equation} 
-where $\vec{k}_{1,2}=k \vec{r}_{1,2}$ is the wave vector of the light seen in detector $1$/detector $2$. As the modulation frequency of the the intensity correlation is depended $R$, the separation of the two sources, i.e the size of the star, can be recovered.
+where $\vec{k}_{1,2}=k \vec{r}_{1,2}$ is the wave vector of the light seen in detector $1$/detector $2$. As the modulation frequency of the the intensity correlation is depended on $R$, the separation of the two sources, i.e. the size of the star, can be recovered. If the random phases of the two sources are not stationary during the measurement, but slowly changing resulting in a finite coherence time, only photons arriving on the detector within approximately this coherence time will create the interference and in the correlation measurement a number of independent modes will be overlaid \cite{goodman2000}.
 
 \section{Incoherent Diffractive Imaging}
 Based on the HBT experiment, a simplified explanation of Incoherent Diffractive Imaging can easily be made for thermal light sources in a classical view by application of the Siegert relation.
 
 \paragraph{Siegert Relation}
+\label{sec:idi}
 For chaotic light with Gaussian statistics, Isserlis' theorem 
-$\left<ABCD\right>=\left<AB\right>\left<CD\right>+\left<AC\right>\left<BD\right>+\left<AD\right>\left<BC\right>$ can be used to factorize \fref{eq:g2}, leading (independently of the spatial configuration of the sources) to
+$\left<ABCD\right>=\left<AB\right>\left<CD\right>+\left<AC\right>\left<BD\right>+\left<AD\right>\left<BC\right>$ can be used to factorize \fref{eq:g2}, leading  independently of the spatial configuration of the sources to
 \begin{equation}
 	g^2(\vec{r_1},\vec{r_2}) = 1+ |g^1(\vec{r_1},\vec{r_2}) |^2 ,
 \end{equation}
@@ -227,9 +228,9 @@ which is known as the Siegert Relation \cite{ou2017}.
 
 As, as according to the van Cittert–Zernike theorem (\fref{eq:vcz}), $g^1$ encodes structural information, 
 \begin{equation}
-	g^1(\vec{k_1},\vec{k_2}) \propto \mathscr{F}S(\vec{r}) = S(\vec{q})
+	g^1(\vec{k_1},\vec{k_2}) \propto \mathscr{F}S(\vec{r}) = S(\vec{q}) \,,
 \end{equation}
-the difference of the intensity-intensity correlation from unity is proportional (with a contrast determining constant $\beta^2$) to the Fourier transform of the arrangement of emitters with $q=\vec{k_1}-\vec{k_2}$ (see \fref{fig:scatteringvectors}).
+the difference of the intensity-intensity correlation from unity is proportional  to the Fourier transform of the arrangement of emitters with $q=\vec{k_1}-\vec{k_2}$ (see \fref{fig:scatteringvectors}). 
 This is the basic principle used in IDI to recover three dimensional spatial information from the intensity correlation.
 \begin{figure}
 	\centering
@@ -240,11 +241,11 @@ This is the basic principle used in IDI to recover three dimensional spatial inf
 \end{figure}
 
 
-A more detailed quantum mechanical treatment considers the mixtures of the probability amplitudes of emission and detection at the two detectors as the individual paths are indistinguishable, leading what was shown as an equivalent description of the HBT effect for thermal light sources \cite{fano1961,sudarshan1963,glauber2006}, but allows the treatment of non classical light sources such as single photon emitters \cite{mandel1995,classen2017}. This introduces a correction term to the equivalent of the Sieger of the order of $1/N$ with $N$ the number of emitters,
+A more detailed quantum mechanical treatment considers the mixtures of the probability amplitudes of emission and detection at the two detectors as the individual paths are indistinguishable, leading what was shown as an equivalent description of the HBT effect for thermal light sources \cite{fano1961,sudarshan1963,glauber2006}.  The quantum mechanical description additionally allows the treatment of non-classical light sources such as single photon emitters \cite{mandel1995,classen2017}. This introduces a correction term to the equivalent of the Sieger of the order of $1/N$ with $N$ the number of emitters,
 \begin{equation}
 	g^2(\vec{r_1},\vec{r_2}) = 1+ |g^1(\vec{r_1},\vec{r_2}) |^2 - \frac{2}{N} ,
 \end{equation}
-which for the considered cases of many fluorescence emitting atoms is negligible.
+which, for the considered cases of many fluorescence emitting atoms, is negligible.
 
 
 \section{Photon Statistics in Speckle Patterns}
@@ -297,22 +298,22 @@ $\Delta M \lesssim \frac{2 p'_1}{\left({p'_1}^2+2 (p'_1-1) p'_2\right)^2} \left(
 \section{Signal to Noise Considerations}
 \label{sec:specklecontrast}
 The Signal to Noise characteristics of IDI are determined by the signal strength and the noise:
-The signal strength is determined by $\left|S(q)\right|^2$, which is dependent and the sample, and the contrast of the recorded speckle image. The noise in the measurement will consist of three parts: First, noise inherent to IDI caused by the random distribution of phases, second, the Poissonian shot noise caused by quantized photons, and third, systematic experimental noise \cite{trost2020, goodman2007}. 
+The signal strength is determined by $\left|S(q)\right|^2$, which is dependent on the sample, and the contrast of the recorded speckle image. The noise in the measurement will consist of three parts: First, noise inherent to IDI caused by the random distribution of phases, second, the Poissonian shot noise caused by quantized photons, and third, systematic experimental noise \cite{trost2020, goodman2007}. 
 
 \paragraph{Speckle Contrast}
 The speckle contrast $\beta =\sqrt{\tfrac{1}{M}}$ is governed by the number of independent modes $M$ overlaid in the measurement (in the quantum mechanical interpretation, these correspond to different, distinguishable non-interfering N-photon states) \cite{goodman2000,ou2017,classen2019}.
 If the measurement is performed over a finite amount of time, the number of temporal modes is
 \begin{equation}
-M_t=\frac{\left(\int_{-\infty}^{\infty} P(t)\diff t\right)^2}{\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t}
+M_t=\frac{\left(\int_{-\infty}^{\infty} P(t)\diff t\right)^2}{\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t} \,,
 \label{eq:modes}
 \end{equation}
-with $P(t)$ the integration window weighting function and $K(t)$ its autocorrelation \cite{goodman2007}. If the integration windows is set by the integration time $T$ of the detector, $P(t)$ is a rectangular function with the width $T$ and
+where $P(t)$ is he integration window weighting function and $K(t)$ its autocorrelation \cite{goodman2007}. If the integration windows is set by the integration time $T$ of the detector, $P(t)$ is a rectangular function with the width $T$ and
 \begin{align*}
-M_{t,\text{rect}} =T \left[\int_{-\infty}^{\infty} \Lambda\left(\frac{t}{T}\right) \left|\mu(t)\right|^2 \diff t \right]^{-1}. \numberthis \\
+	M_{t,\text{rect}} =T \left[\int_{-\infty}^{\infty} \Lambda\left(\frac{t}{T}\right) \left|\mu(t)\right|^2 \diff t \right]^{-1} \,, \numberthis \\
 \text{with  }\Lambda(x) = \begin{cases} 
  1-\left|x\right|& \textit{if }|x|<1\\
-0 & \textit{otherwise}\\ 
-\end{cases}
+0 & \textit{otherwise}\\  
+\end{cases} \,.
 \label{eq:modesapprox}
 \end{align*}
 Considering the case of a long integration time, $T\gg\tau$, this can be approximated as $M\approx\frac{T}{\tau}$. For a short integration time,  $T\ll\tau$, the number of temporal modes $M$ approaches unity.
@@ -376,7 +377,7 @@ Path differences longer than the coherence length give additional modes $M_S$, t
 
 If the speckle pattern is not spatially resolved by the detector because its resolution is too low compared to the change in intensity, undersampling will occur, the measured signal will be spatially averaged giving independent spatial sampling modes $M_D$ \cite{goodman2007}.
 
-Even though the number of from the different effects discussed above are not completely independent, as an approximation and upper bound on the reduction in contrast, the total number of modes can be taken as the product of their upper bounds. 
+Even though the number of from the different effects discussed above are not completely independent, as an approximation and upper bound on the reduction in contrast, the total number of modes might be estimated as the product of the respective upper bounds. 
 
 
 \paragraph{Estimation of the Noise}
@@ -393,7 +394,7 @@ Combining the squared contrast of the speckle pattern, the expectation value of 
 SNR\propto  \frac{|S(q)|^2 \mu\sqrt{N}}{M\sqrt{\mu^2 \frac{2 M + 1}{M^2 + 2}+ \mu \frac{M+1}{M} + 1}}
 \label{eq:snr}
 \end{equation}
-as an estimation of the Signal to Noise Ratio(SNR), which will be further examined by performing simulations in \fref{chap:simulation}.
+as an estimation of the Signal to Noise Ratio (SNR), which will be further examined by performing simulations in \fref{chap:simulation}.
 %Which factors influence SNR -lifetime/pulsewidth -polarisation -sampling conditions / undersampling -sample thickness / coherence length -N images -N photons
 
 %- SNR
@@ -422,7 +423,7 @@ The fine structure of the intensity variations and whether they increase or decr
 As each point identified as belonging to a Kossel line has to be part of a conic section of the same plane with each cone originating from the same point, each point $\vec{r}$ on a line has to fulfill
 
 \begin{equation}
-\frac{\vec{r} \cdot \vec{q}}{\left|\vec{r}\right| \left| \vec{q}\right|} = \frac{\lambda}{2d}
+\frac{\vec{r} \cdot \vec{q}}{\left|\vec{r}\right| \left| \vec{q}\right|} = \frac{\lambda}{2d} \,,
 \end{equation}
  for a reciprocal lattice vector $\vec{q}$ which is an element of the allowed reflections $Q$, wavelength $\lambda$ and lattice spacing $d$.
 \begin{figure}
