--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -225,7 +225,8 @@ was included, thus smearing the peaks to lower energies with a strength paramete
 
 
 \paragraph{Photon counting}
-The mean number of signal and scattering photons found from the spectra as well as the peak width and the charge sharing point spread function for the detectors were used to find the thresholds for a classification of the pixel values into signal photon numbers for each of the groups as described in \fref{sec:chargesharing} by simulating 1000 images with 4096x4096 pixels with the determined K$_\alpha$, K$_\beta$ and scattering intensities, applying the charge sharing simulation and using the determined FWHM as a (assumed Gaussian) detector noise to estimate the number of signal photons corresponding with the highest probability to each energy bin of 10\,eV. 
+The mean number of signal and scattering photons found from the spectra as well as the peak width and the charge sharing point spread function for the detectors were used to find the thresholds for a classification of the pixel values into signal photon numbers for each of the groups as described in \fref{sec:chargesharing}. 
+With the determined K$_\alpha$, K$_\beta$ and scattering intensities, 1000 images with 4096x4096 pixels were simulated with Gaussian charge sharing. The determined peak widths were used as the FWHM of the (assumed to be Gaussian) detector noise.  The number of signal photons corresponding with the highest probability to each energy was determined for bins of 10\,eV. 
 
 
 \paragraph{Final shot filtering}
@@ -281,9 +282,9 @@ For the crystal data, a full three dimensional correlation of the rotation and o
 Applying the aforementioned preprocessing and analysis steps to the recorded fluorescence images for all three classes of samples leads to results as follows. 
 \subsection{Imaging the Focus}
 
-The regression of the spectra (\fref{fig:spectrafoil}) resulted in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,\micrometer copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, the regression provided estimates in the range of 15-25 modes. The charge sharing approximation parameter $p$ was found to be 0.43$\pm$0.01, meaning about 40\% of the photon hits are affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe lead to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single photon energy, which is no longer present in the spectra simulated with a Gaussian charge cloud (see \fref{fig:thresholdsfoil}) for an example.
+The regression of the spectra (\fref{fig:spectrafoil}) resulted in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,\micrometer copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, the regression provided estimates in the range of 15-25 modes. The charge sharing approximation parameter $p$ was found to be 0.43$\pm$0.01, meaning about 40\% of the photon hits were affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe led to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single-photon energy. This is no longer present in the spectra simulated with a Gaussian charge cloud (see \fref{fig:thresholdsfoil}) for an example.
 
-The reconstructions were performed once without discretization and only applying a threshold of 1500\,eV and once with discretization into photons using the thresholds found in the simulation of the spectra. Without discretization strong artifacts were visible in the reconstruction, which were mostly reduced by the applied photon counting (see \fref{fig:foil_photonmodes} for a comparison).
+The reconstructions were performed once without discretization and only applying a threshold of 1500\,eV and once with discretization into photons using the thresholds found in the simulation of the spectra. Without discretization, strong artifacts were visible in the reconstruction, which were mostly reduced by the applied photon counting (see \fref{fig:foil_photonmodes} for a comparison).
 
 \begin{figure}
 	\centering
@@ -298,12 +299,12 @@ The reconstructions were performed once without discretization and only applying
 \end{figure}
 
 
-The excited volume can in horizontal direction be approximated as a rectangular function with a width of $\sqrt{2}$-times the thickness of the foil used, due to the 45° angle, if the horizontal FWHM of the focus is much smaller than the thickness of the foil and ignoring absorption.  In the vertical direction, the volume is limited by the FWHM of the focus and can be roughly approximated to be Gaussian. 
+The excited volume can be approximated in horizontal direction as a rectangular function with a width of $\sqrt{2}$-times the thickness of the foil used, due to the 45° angle, as the horizontal FWHM of the focus is much smaller than the thickness of the foil and ignoring absorption.  In the vertical direction, the volume is limited by the FWHM of the focus and can be roughly approximated to be Gaussian. 
 In a small-angle approximation, the reconstruction is the magnitude squared of the 2D Fourier transform of the volume. As the magnitude squared of the Fourier transform of a Gaussian with FWHM $f$ is another Gaussian with FWHM $\frac{4\sqrt{2}\log{2}}{f}$ and of a rectangular function\footnote{If the foil were thicker, the absorption length $a$ could not be ignored and the more complicated $\left|\mathscr{F}\left(e^{-\frac{x}{a}} \Pi \left(\frac{x}{w}\right)\right)\right|^2 \propto \frac{\cosh \left(\frac{w}{a}\right)-\cos (q w)}{a^2 q^2+1}$
-	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile will not be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged (corresponding to a convolution with a rectangular sampling kernel), reducing the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
+	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile will not be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged. This corresponds to a convolution with a rectangular sampling kernel and reduces the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
 
 For a 5\,\micrometer Copper foil placed at three different positions, at the nominal focus and two positions further upstream, results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
-The regression allows an estimation of the focal width in the vertical direction at a nominal focus of (240$\pm$20)\,nm and while defocused by 250\,\micrometer of (380$\pm$40)\, nm (the stated errors only include regression uncertainty). In \fref{fig:fereco2d} the results for 10\,\micrometer and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\micrometer and 10\,\micrometer foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500*$\sqrt{2}$\,nm.
+The regression estimates of the focal width in the vertical direction at a nominal focus as (240$\pm$20)\,nm and while defocused by 250\,\micrometer as (380$\pm$40)\, nm (the stated errors only include regression uncertainty). In \fref{fig:fereco2d} the results for 10\,\micrometer and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\micrometer and 10\,\micrometer foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500*$\sqrt{2}$\,nm.
 
 Nevertheless, for all three foils in focal position the signal amplitude can be extrapolated by the regression as 0.004$\pm$0.001 with no significant difference between the samples.
 The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the iron 10\,\micrometer foil, and 0.002 for the iron 500\,nm foil. The mean over the regions of interest of standard errors of the mean over the different shots used in the reconstruction are equal to these as well.
