--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -238,7 +238,7 @@
 \hypersetup{
 	pdfborder={0 0 0}, 
 	bookmarksnumbered=true,
-	pdftitle={Master Thesis},
+	pdftitle={Incoherent Imaging with X-Ray Fluorescence},
 	pdfauthor={Felix Frederik Zimmermann}
 }
 
